--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "basic-node-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+   "name": "basic-node-app",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "author": "",
+   "license": "ISC",
+   "publishConfig": {
+      "registry": "http://localhost:8081/repository/npm-private/"
+   }
 }
