--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-registry=http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable}
+registry=http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable} --always-auth
