--- a/.npmrc
+++ b/.npmrc
@@ -4,5 +4,5 @@
 --init.author.url = http://localhost:8081/repository/npm-private/
 # an email is required to publish npm packages
 email=raj.pericharla@gmail.com
-always-auth=true
-_auth=
+always-auth=false
+#_auth=
