--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-#registry=http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable} --always-auth
+registry=http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable} --always-auth
 --init.author.name = srinivasa raju pericharla
 --init.author.email = raj.pericharla@gmail.com
 --init.author.url = http://localhost:8081/repository/npm-private/
