--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
 registry=http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable} --always-auth
 --init.author.name = srinivasa raju pericharla
 --init.author.email = raj.pericharla@gmail.com
---init.author.url = http://localhost:8081/repository/npm-private/
+--init.author.url = http://localhost:8081/repository/npm-private/:_authToken={base64 encoded usernameVariable:passwordVariable}
 # an email is required to publish npm packages
 email=raj.pericharla@gmail.com
 always-auth=false
